--- a/rentsolutions/templates/rentsolutions/propertymanager.html
+++ b/rentsolutions/templates/rentsolutions/propertymanager.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload Payment Receipt</title>
-    
+    <title>Property management</title>
 </head>
 <body>
     <div>
         {% include "navbar.html" %}
     </div>
-    <h1>welcome home</h1>
+
+    <h1>I am property manager</h1>
 </body>
 </html>
