--- a/rentsolutions/templates/rentsolutions/login.html
+++ b/rentsolutions/templates/rentsolutions/login.html
@@ -105,7 +105,7 @@
       <button type="submit">Login</button>
     </form>
     <div>
-      <a href="">Register</a>
+      <a href="{% url 'register_as_landlord'%}">Register</a>
       <a href="">Reset password</a>
     </div>
     {% if message %}
